# brokerage-connect

./: LICENSE  README.md  pyproject.toml
brokerage/: README.md  __init__.py  _logging.py  _vendor.py  broker_adapter.py  config.py  trade_objects.py
brokerage/futures/: __init__.py  contract_spec.py  contracts.yaml  notional.py  pricing.py
brokerage/futures/sources/: __init__.py  fmp.py  ibkr.py
brokerage/ibkr/: __init__.py  adapter.py
brokerage/plaid/: __init__.py  client.py  connections.py  secrets.py
brokerage/schwab/: __init__.py  adapter.py  client.py
brokerage/snaptrade/: __init__.py  _shared.py  adapter.py  client.py  connections.py  secrets.py  trading.py  users.py
