[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brokerage-connect"
version = "0.2.0"
description = "Unified Python interface for brokerage APIs — Schwab, SnapTrade, IBKR, Plaid"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/henrysouchien/brokerage-connect"
Source = "https://github.com/henrysouchien/brokerage-connect"

[project.optional-dependencies]
schwab = ["schwab-py"]
snaptrade = ["snaptrade-python-sdk", "boto3", "botocore"]
ibkr = ["ib-async"]
plaid = ["plaid-python", "certifi", "boto3", "botocore"]

[tool.hatch.build.targets.wheel]
packages = ["brokerage"]

[tool.hatch.build.targets.sdist]
include = ["brokerage/", "pyproject.toml", "README.md", "LICENSE"]
